# judgercpp

./: .gitignore  judge_core.cpp  judger.h  makefile  readme.md
judge_server/: CMakeLists.txt  TODO  USER_CONFIG.hpp  client.cpp  readme.md  server.cpp
judge_server/src/: Cache.hpp  Client.hpp  JudgeWork.hpp  MessageBuffer.hpp  Problem.hpp  Result.hpp  Send.hpp  Server.hpp  define.hpp  execJudgeWork.hpp  judgeArgs.hpp  judgeQueue.hpp  judgeWorkPool.hpp  message.hpp  socketBase.hpp  socketManager.hpp  socketPicker.hpp  utils.hpp
judge_server/tests/: test_MessageResultJudge.cpp  test_MessageSendJudge  test_MessageSendJudge.cpp
src/: common.h  judge_core.cpp  log.hpp  utils.hpp
